<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kenya Airways</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">Insert Flights</string>
    <string name="back">Check Flights</string>
    <string name="view">View Data</string>
    <string name="next">Go Next</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="comment">leave us a comment</string>
    <string name="payment">select your payment method</string>
    <string name="flights">search Available Flights</string>
    <string name="bank">Bank Details</string>
    <string name="passenger">Passenger Details</string>
    
    
    <string name="country_prompt" >Choose a country</string>
    <string-array name="Country_names">
<item>Kenya</item>
<item>Tanzania</item>
<item>Uganda</item>
<item>Ethiopia</item>
<item>Seychells</item>
</string-array>

    <string name="class_prompt" >Choose a class</string>
    <string-array name="Class_names">
<item>Business</item>
<item>Economy</item>
<item>Cargo</item>
</string-array>

    <string name="number_prompt" >Choose appropriately</string>
    <string-array name="number">
<item>0</item>
<item>1</item>
<item>2</item>
<item>3</item>
</string-array>

</resources>
