<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/index5"
    android:weightSum="100"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="85"
        >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
            <TableRow>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="To"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:entries="@array/Country_names"
                    android:prompt="@string/country_prompt"
                    />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="From"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/Country_names"
                    android:prompt="@string/country_prompt"
                     />
            </TableRow>
            <TableRow
                 android:layout_width="wrap_content"
                >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Departure Date"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edFrom_Date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/from_date"
                    android:ems="10" />
               
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Return Date"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edTo_Date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/to_date"
                    android:ems="10" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Class"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:entries="@array/Class_names"
                    android:prompt="@string/class_prompt"
                    />
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Number of infants"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:entries="@array/number"
                    android:prompt="@string/number_prompt"
                    />
            </TableRow>
             <TableRow>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Number of Children"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/number"
                    android:prompt="@string/number_prompt"
                     />
            </TableRow>            
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_weight="15"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:weightSum="100"
        >

        <Button
            android:id="@+id/bBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/back"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/view"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/bNext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="34"
            android:text="@string/search"
            android:textStyle="bold" />
        
    </LinearLayout>

</LinearLayout>